--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm am 28 years old, live in toronto but Maine is home. I love the ocean and anything to do with the great outdoors. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>USA/Canada</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Some favorite hobbies of mine are fishing, surfing and woodwork</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Owning my own buisness</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Toronto</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer to increase my knowledge in a meaningful and marketable fashion.</p>
     </section>
 
     <footer id="footer">
