--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I'm am 28 years old, live in toronto but Maine is home. I love the ocean and anything to do with the great outdoors. </p>
+      <p>I'm am 28 years old, born in the USA but grew up in toronto. I studied economics at Queen's University.  </p>
       <h1>Where I'm From</h1>
       <p>USA/Canada</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Some favorite hobbies of mine are fishing, surfing and woodwork</p>
+      <p>Some favorite hobbies of mine are surfing, video games, fishing and woodwork.</p>
       <h1>What's your dream job?</h1>
       <p>Owning my own buisness</p>
       <h1>Where do you live?</h1>
